# Real_Time_Operating_Systems

./: README.md
ADC_PWM_DI/main/: main.c
ADC_minimum_configuration/: CMakeLists.txt
Libraries/ADC_lib/src/: adc_lib.c
Libraries/PWM_Control/src/: pwm_control.c
NTC_ADC/: CMakeLists.txt
NTC_ADC/main/: main.c
NTC_ADC_CALIBRATE/: CMakeLists.txt
NTC_ADC_CALIBRATE/main/: CMakeLists.txt  oneshot_read_main.c
NTC_UART_ADC_RGB _V2/: CMakeLists.txt
NTC_UART_ADC_RGB _V2/main/: CMakeLists.txt  main.c  peripherals.h  setup_all.c
NTC_UART_ADC_RGB _V2/main/setup/: setup_rgb_temp.h  temp_ntc.c  temp_ntc.h
NTC_UART_ADC_RGB/main/: CMakeLists.txt  main.c  setup_rgb_dimmer.c  setup_rgb_dimmer.h  setup_rgb_temp.c
PWM_Control/include/: pwm_control.h
PWM_Control/src/: pwm_control.c  pwm_control.h
RGB_Control/: CMakeLists.txt
RGB_Control/main/: CMakeLists.txt  main.c
SoftAP_test/: CMakeLists.txt
UART_Async/: CMakeLists.txt  sdkconfig.old
app_web/: CMakeLists.txt  sdkconfig.old  test.html
app_web/main/: CMakeLists.txt  main.c  main2.c  peripherals.c  peripherals.h
app_web/main/NTC_lib/include/: ntc_lib.h
app_web/main/NTC_lib/src/: ntc_lib.c
app_web/main/server/include/: server.h
app_web/main/server/src/: server.c
app_web/main/webpage/: credenciales.html  lectura_pot.html  lectura_temp.html  led_rgb.html  scripts.js  styles.css
app_web/main/wifi_manager/include/: wifi_manager.h
app_web/main/wifi_manager/src/: wifi_manager.c
led_button_input/: CMakeLists.txt
led_button_input/main/: gpio_example_main.c
(+4 files in other folders)
